--- a/site/en/tutorials/quickstart/beginner.ipynb
+++ b/site/en/tutorials/quickstart/beginner.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Yann2808/Awesome-LLM/blob/main/site/en/tutorials/quickstart/beginner.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "rX8mhOLljYeM"
       },
       "source": [
@@ -115,10 +105,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "0trJmd6DjqBZ",
-        "outputId": "c97dd2f8-d33a-41af-f24a-bddf72360741",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c97dd2f8-d33a-41af-f24a-bddf72360741"
       },
       "outputs": [
         {
@@ -151,11 +141,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "7FP5258xjs-v"
+        "id": "7FP5258xjs-v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f849ea43-1376-46ff-a86d-86491b200c7d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ],
       "source": [
         "mnist = tf.keras.datasets.mnist\n",
         "\n",
@@ -176,11 +179,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "h3IKyzTCDNGo"
+        "id": "h3IKyzTCDNGo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c9a6570-840f-4572-c9bd-d9ba1c5ce247"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(**kwargs)\n"
+          ]
+        }
+      ],
       "source": [
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
@@ -203,11 +219,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "OeOrNdnkEEcR"
+        "id": "OeOrNdnkEEcR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d7fc35cd-2bb2-4aa0-8595-c2d1512c50ad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.08636048,  0.5177644 ,  0.4695487 , -0.32025382, -0.10830527,\n",
+              "         0.17620675,  0.07823696, -0.01973513,  0.41789702, -0.16017516]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
         "predictions = model(x_train[:1]).numpy()\n",
         "predictions"
@@ -224,11 +257,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "zWSRnQ0WI5eq"
+        "id": "zWSRnQ0WI5eq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "908e7b57-de4d-4db5-d012-86833595a614"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.09385049, 0.14447504, 0.13767435, 0.06249513, 0.07724924,\n",
+              "        0.102673  , 0.09309117, 0.08440337, 0.13074376, 0.07334448]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
         "tf.nn.softmax(predictions).numpy()"
       ]
@@ -253,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "RSkzdv8MD0tT"
       },
@@ -275,11 +325,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "NJWqEVrrJ7ZB"
+        "id": "NJWqEVrrJ7ZB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "14c62396-1bd8-4ec7-9345-c35d23750961"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float32(2.276206)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ],
       "source": [
         "loss_fn(y_train[:1], predictions).numpy()"
       ]
@@ -295,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "9foNKHzTD2Vo"
       },
@@ -319,11 +384,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "y7suUbJXVLqP"
+        "id": "y7suUbJXVLqP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f003cdd5-e81d-4b27-d316-07851b4638ef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 3ms/step - accuracy: 0.8566 - loss: 0.4862\n",
+            "Epoch 2/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 4ms/step - accuracy: 0.9543 - loss: 0.1551\n",
+            "Epoch 3/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 3ms/step - accuracy: 0.9660 - loss: 0.1094\n",
+            "Epoch 4/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 4ms/step - accuracy: 0.9731 - loss: 0.0876\n",
+            "Epoch 5/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 3ms/step - accuracy: 0.9774 - loss: 0.0718\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7982a3a37e60>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ],
       "source": [
         "model.fit(x_train, y_train, epochs=5)"
       ]
@@ -339,11 +435,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "F7dTAzgHDUh7"
+        "id": "F7dTAzgHDUh7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d221d29-605f-47d8-b71f-4305cf9d255b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 - 1s - 2ms/step - accuracy: 0.9774 - loss: 0.0761\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.07607059180736542, 0.977400004863739]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ],
       "source": [
         "model.evaluate(x_test,  y_test, verbose=2)"
       ]
@@ -368,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "rYb6DrEH0GMv"
       },
@@ -382,11 +500,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "cnqOZtUp1YR_"
+        "id": "cnqOZtUp1YR_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "020d84bf-17df-4a23-d6c2-bd363eed8026"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
+              "array([[4.34860965e-08, 3.14941340e-09, 2.10792045e-04, 9.91537891e-05,\n",
+              "        6.99694122e-11, 8.88723548e-08, 4.08891128e-13, 9.99687433e-01,\n",
+              "        3.89479283e-07, 2.16672606e-06],\n",
+              "       [7.80104301e-07, 5.59260836e-04, 9.99403954e-01, 2.97179122e-05,\n",
+              "        2.90521713e-15, 4.55682198e-07, 5.83832525e-06, 1.91793543e-12,\n",
+              "        2.27119763e-08, 2.25037328e-13],\n",
+              "       [4.73531799e-07, 9.99072194e-01, 1.96942696e-04, 7.23178937e-06,\n",
+              "        4.94766891e-06, 9.52052801e-07, 8.00126691e-06, 6.45628257e-04,\n",
+              "        6.35987089e-05, 5.80145354e-08],\n",
+              "       [9.99798715e-01, 1.48979395e-09, 1.13532406e-05, 2.41589049e-07,\n",
+              "        2.28543172e-06, 9.26001667e-06, 1.17592695e-04, 5.44997129e-05,\n",
+              "        1.19403626e-06, 4.91841774e-06],\n",
+              "       [1.23171844e-06, 1.22508517e-10, 5.94689027e-06, 4.63857441e-09,\n",
+              "        9.99387145e-01, 1.14330476e-07, 1.16359467e-06, 1.44855905e-04,\n",
+              "        1.63278202e-07, 4.59311792e-04]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
         "probability_model(x_test[:5])"
       ]
@@ -409,8 +557,7 @@
     "colab": {
       "name": "beginner.ipynb",
       "toc_visible": true,
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
